# wurwolves

./: .env  .env.dev  .env.example  .env.prod  .env.traefik  .env.trafik  .envrc  .gitignore  .gitpod.yml  .pre-commit-config.yaml  Caddyfile  LICENSE  Procfile  README.md  alembic.ini  app.json  autoapp.py  compose.duckdns.yml  compose.traefik.yml  compose.watchtower.yml  compose.yaml  compose.yml  demo_data.py  docker-compose.yml  flake.nix  nightwatch.conf.js  package-lock.json  package.json  pyproject.toml  readme.md  requirements.in  requirements.txt  requirementsDev.in  server.js  setup.cfg  setup.py  testing.db  testing.db-journal  webpack.config.js
.github/: FUNDING.yml
.github/workflows/: build_images.yml  prettier.yml  test_backend.yml
analysis/: untitled0.py
assets/js/: main.js
backend/: .gitignore  database.py  events.py  frontend_parser.py  game.py  main.py  model.py  names.txt  package-lock.json  package.json  requirements.txt  reset_db.py  resolver.py  roles.py  sample_frontend_state.json  setup.py  user_id.py  utils.py
backend/roles/: __init__.py  acolyte.py  common.py  distribution.py  exorcist.py  fool.py  jester.py  mason.py  mayor.py  medic.py  miller.py  narrator.py  priest.py  prostitute.py  registration.py  seer.py  spectator.py  teams.py  utility_mixins.py  vigilante.py  villager.py  wolf.py
frontend/: package-lock.json
frontend/src/: App.css  App.js  demoData.js
instance/: data.sqlite
migration/: env.py  script.py.mako
migration/versions/: 23376ece95d8_.py  5e1c1fbd1d61_.py  670c372b0728_.py  6ee12115aa09_.py  8ffd459e9e94_.py  a0b4caa55845_.py  ae54f8aff9e9_.py  c715763ad094_.py  e3302bf1f82c_.py  e75c20e417d1_.py  eec0897350c7_.py
nightwatch_tests/: test_load.js
react-ui/: package-lock.json  package.json
react-ui/public/: index.html
server/: index.js
shell_scripts/: clean.sh
src/: App.js  demoData.js
supervisord_programs/: gunicorn.conf
tests/: conftest.py  factories.py  shared_fixtures.py  test_actions.py  test_backend.py  test_database.py  test_events.py  test_forms.py  test_frontend_parsing.py  test_functional.py  test_game.py  test_hosted_backend.py  test_models.py  test_outcomes.py  test_resolver.py  test_role_generation.py  test_selenium.py
tests_output/: FIREFOX_83.0_17.7.0_test_load.xml  test_load.xml
wurwolves/: __init__.py  app.py  auth.py  blog.py  extensions.py
(+77 files in other folders)
