[tool.poetry]
name = "wurwolves"
version = "0.1.0"
description = "A simple werewolves (/ mafia) webapp using a React+Redux frontend with a Python+FastAPI+SQLAlchemy backend, served by a static node server"
authors = ["Charles Baynham <charles.baynham@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

alembic = "^1.4.3"
# fastapi[all] = "^0.61.2"
graphql-core = "^2.3.2"
idna = "^2.10"
markupsafe = "^1.1.1"
promise = "^2.3"
psutil = "^5.8.0"
psycopg2 = "^2.8.6"
python-dotenv = "^0.15.0"
six = "^1.15.0"
sqlalchemy = "^1.3.20"
#sqlalchemy-utils = "^0.36.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.7.1"
pip-tools = "^7.4.1"
black = "^24.4.2"
selenium = "^4.22.0"
geckodriver-autoinstaller = "^0.1.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
